[package]
name = "image-utils"
version = "0.1.0"
authors = ["Anton Smolin"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/embali/image-utils/"
homepage = "https://github.com/embali/image-utils/"
documentation = "https://docs.rs/image-utils/"
description = """Image processing utilities"""
exclude = ["tests/images"]

[dependencies]
image = "0.12.3"
gif = "0.9.0"
wait-timeout = "0.1.4"
