[package]
name = "image-utils"
version = "0.2.0"
authors = ["Anton Smolin"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/embali/image-utils/"
homepage = "https://github.com/embali/image-utils/"
documentation = "https://docs.rs/image-utils/"
description = """Image processing utilities"""
keywords = ["image", "utils", "crop", "resize", "gif"]
categories = ["multimedia::images"]
exclude = ["tests/images"]

[badges]
travis-ci = { repository = "embali/image-utils" }

[dependencies]
image = "0.12.3"
gif = "0.9.0"
gif-dispose = "1.0.1"
